# meridian-blockchain

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  DEPLOY.md  Makefile  PRD - Peak6.md  README.md  STRATEGY.md
app/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  vitest.config.ts
app/public/: .gitkeep
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/api/insights/: route.ts
app/src/app/history/: page.tsx
app/src/app/markets/: page.tsx
app/src/app/portfolio/: page.tsx
app/src/app/trade/: page.tsx
app/src/app/trade/[market]/: page.tsx
app/src/components/: Balances.tsx  BothSidesBook.tsx  Countdown.tsx  DevToolbar.tsx  MarketCard.tsx  MarketPicker.tsx  MintBurnPanel.tsx  Nav.tsx  OpenOrders.tsx  OrderBook.tsx  Payoff.tsx  PlaceOrderPanel.tsx  PositionGuard.tsx  PositionRow.tsx  RedeemPanel.tsx  Sidebar.tsx  StockTile.tsx  StrikeList.tsx  ThemeToggle.tsx  TopBar.tsx  TradePanel.tsx  WalletButton.tsx
app/src/components/__tests__/: TradePanel.wallet.test.tsx  orderbook.test.ts
app/src/hooks/: MeridianContext.tsx  usePrices.ts  useTx.ts
app/src/lib/: MeridianContext.tsx  actions.ts  countdown.ts  demoWallet.ts  feeds.test.ts  feeds.ts  format.test.ts  format.ts  history.test.ts  history.ts  idlPatch.ts  liveTestEnv.ts  market.test.ts  market.ts  marketClock.ts  marketStats.test.ts  marketStats.ts  marketsView.test.ts  marketsView.ts  matching.test.ts  matching.ts  mintburn.live.test.ts  multiuser.live.test.ts  pdas.test.ts  pdas.ts  place.live.test.ts  pnl.test.ts  pnl.ts  prices.test.ts  prices.ts  program.test.ts  program.ts  read.live.test.ts  tradePaths.test.ts  tradePaths.ts  tx.ts  useTx.ts
app/src/lib/__tests__/: buyno.devnet.test.ts  countdown.test.ts  feeds.test.ts  format.test.ts  market.test.ts  marketClock.test.ts  marketsView.test.ts  matching.test.ts  mintburn.live.test.ts  multiuser.live.test.ts  payoff.test.ts  pdas.test.ts  place.live.test.ts  pnl.test.ts  prices.test.ts  program.test.ts  read.live.test.ts  tradePaths.test.ts
app/src/lib/idl/: meridian.json  meridian.ts
audit-agent/: .env.example  FINDINGS-TRIAGE.md  README.md  package-lock.json  package.json  tsconfig.json
audit-agent/eval/: run-eval.ts
audit-agent/src/: config.ts  graph.ts  lenses.ts  llm.ts  report.ts  run.ts  schema.ts  tools.ts
automation/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  package-lock.json  package.json  tsconfig.json  vitest.config.ts
automation/patches/: @pythnetwork+pyth-solana-receiver+0.16.0.patch  @pythnetwork+solana-utils+0.6.0.patch
automation/src/: client.ts  config.ts  index.ts  liveTestEnv.ts  log.ts  pyth.ts  scheduler.ts  tradingCalendar.ts
automation/src/idl/: meridian.ts
automation/src/jobs/: createStrikes.ts  seedLiquidity.ts  settle.ts
automation/test/: cli.test.ts  client.live.test.ts  client.test.ts  config.test.ts  createStrikes.live.test.ts  createStrikes.test.ts  createStrikesPrevClose.test.ts  pyth.test.ts  scheduler.test.ts  settle.live.test.ts  settle.test.ts  tradingCalendar.test.ts
docs/: AI-USAGE.md  ARCHITECTURE.md  DEMO-SCRIPT.md  DESIGN.md  DEVNET-RUNBOOK.md  KNOWN-ISSUES.md  SECURITY-AUDIT.md
docs/brainstorms/: minimal-clob-scope-requirements.md
docs/plans/: 2026-05-27-001-feat-minimal-onchain-clob-plan.md  2026-05-28-001-fix-clob-matching-engine-hardening-plan.md  2026-05-28-002-feat-frozen-collateral-recovery-plan.md  2026-05-28-003-feat-minimal-frontend-trade-ui-plan.md  2026-05-29-001-feat-prd-completion-plan.md  2026-06-04-001-fix-share-quantity-unit-scaling-plan.md  2026-06-04-002-fix-no-side-1e6-unit-mismatch-plan.md
programs/meridian/: Cargo.toml
programs/meridian/src/: error.rs  lib.rs  token_util.rs
programs/meridian/src/instructions/: admin.rs  admin_force_expire_order.rs  burn_pair.rs  buy_no.rs  cancel_order.rs  create_strike_market.rs  initialize_config.rs  mint_pair.rs  mod.rs  place_limit_order.rs  place_market_order.rs  redeem.rs  sell_no.rs  settle_market.rs  settle_sweep.rs
programs/meridian/src/matching/: book_side.rs  match_step.rs  mod.rs  order_key.rs  tests.rs
programs/meridian/src/state/: book.rs  config.rs  market.rs  mod.rs  pyth.rs
scripts/: README.md  admin-settle-redeem-demo.mjs  bootstrap-devnet.mjs  deploy-devnet.sh  forge-pyth-account.mjs  lifecycle-demo.mjs  local-dev.sh  package-lock.json  package.json  post-pyth-update.mjs  seed-devnet-demo-market.mjs  seed-local-markets.mjs  settle-redeem-demo.mjs  settle-redeem-demo.sh  setup-demo-wallet.mjs
tests/litesvm/: Cargo.toml
tests/litesvm/src/: lib.rs
tests/litesvm/tests/: u3_smoke.rs  u4_mint_burn.rs  u5_orders.rs  u6_buy_no_sell_no.rs  u7_settle_redeem.rs  u8_lifecycle.rs
trident-tests/: Cargo.toml  README.md  Trident.toml
trident-tests/clob_invariants/: fuzz_accounts.rs  test_fuzz.rs  types.rs
